--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,6 @@
 <div id="navbar-full">
     <div class="container">
-        <nav class="navbar navbar-default navbar-transparent navbar-fixed-top" role="navigation">
-
+        <nav class="navbar navbar-default navbar-transparent navbar-fixed-top header" role="navigation">
             <div class="container">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
@@ -26,9 +25,9 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="components.html">Components</a></li>
-
-                        <li><a href="http://www.creative-tim.com/product/get-shit-done-kit" class="btn btn-round btn-default">Download</a></li>
+                        <li><a routerLink="/members" routerLinkActive="active">系所成員</a></li>
+                        <!-- <li><a href="components.html">Components</a></li>
+                        <li><a href="http://www.creative-tim.com/product/get-shit-done-kit" class="btn btn-round btn-default">Download</a></li> -->
                     </ul>
 
                 </div>
@@ -39,7 +38,7 @@
     </div>
     <!--  end container-->
 
-    <div class='blurred-container'>
+    <!-- <div class='blurred-container'>
         <div class="motto">
             <div>中正</div>
             <div class="border no-right-border">資</div>
@@ -48,6 +47,6 @@
         </div>
         <div class="img-src" style="background-image: url('assets/img/cover_4.jpg')"></div>
         <div class='img-src blur' style="background-image: url('assets/img/cover_4_blur.jpg')"></div>
-    </div>
+    </div> -->
 
 </div>
