--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -1,7 +1,7 @@
 <div id="carousel">
-    <!--    
-            IMPORTANT - This carousel can have a special class for a smooth transition "gsdk-transition". Since javascript cannot be overwritten, if you want to use it, you can use the bootstrap.js or bootstrap.min.js from the GSDKit or you can open your bootstrap.js file, search for "emulateTransitionEnd(600)" and change it with "emulateTransitionEnd(1200)"     
-            
+    <!--
+            IMPORTANT - This carousel can have a special class for a smooth transition "gsdk-transition". Since javascript cannot be overwritten, if you want to use it, you can use the bootstrap.js or bootstrap.min.js from the GSDKit or you can open your bootstrap.js file, search for "emulateTransitionEnd(600)" and change it with "emulateTransitionEnd(1200)"
+
     -->
     <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
       <!-- Indicators -->
@@ -9,21 +9,25 @@
         <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
         <li data-target="#carousel-example-generic" data-slide-to="1"></li>
         <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="3"></li>
       </ol>
-    
+
       <!-- Wrapper for slides -->
       <div class="carousel-inner">
         <div class="item active">
-          <img src="assets/img/carousel_blue.png" alt="Awesome Image">
+          <img src="assets/img/carousel1.png" alt="Awesome Image">
         </div>
         <div class="item">
-          <img src="assets/img/carousel_green.png" alt="Awesome Image">
+          <img src="assets/img/carousel2.png" alt="Awesome Image">
         </div>
         <div class="item">
-          <img src="assets/img/carousel_red.png" alt="Awesome Image">
+          <img src="assets/img/carousel3.png" alt="Awesome Image">
+        </div>
+        <div class="item">
+          <img src="assets/img/carousel4.png" alt="Awesome Image">
         </div>
       </div>
-    
+
       <!-- Controls -->
       <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
         <span class="fa fa-angle-left"></span>
