--- a/src/app/news-list/news-list.component.css
+++ b/src/app/news-list/news-list.component.css
@@ -1,95 +1,67 @@
-    body {
-      font-family: Microsoft JhengHei;
-    }
+body {
+  font-family: "Helvetica", Arial, "微軟正黑體";
 
-    a {
-      padding-top: 8px;
-      color: #656765;
-    }
-
-    a:hover {
-      color: #0089A7;
-    }
-
-    a:link {
-      display: block;
-      text-decoration: none;
-    }
-
-    table tbody tr:hover {
-      cursor: pointer;
-      color: #0089A7;
-    }
-    /* Tabs panel */
-
-
-    .tabbable-panel {
-      border: 1px solid #eee;
-      padding: 10px;
-    }
-    /* Default mode */
-
-    .tabbable-line>.nav-tabs {
-      border: none;
-      margin: 0px;
-    }
-
-    .tabbable-line>.nav-tabs>li {
-      margin-right: 2px;
-    }
-
-    .tabbable-line>.nav-tabs>li>a {
-      border: 0;
-      margin-right: 0;
-      color: #737373;
-    }
-
-    .tabbable-line>.nav-tabs>li>a>i {
-      color: #a6a6a6;
-    }
-
-    .tabbable-line>.nav-tabs>li.open,
-    .tabbable-line>.nav-tabs>li:hover {
-      border-bottom: 4px solid #fbcdcf;
-    }
-
-    .tabbable-line>.nav-tabs>li.open>a,
-    .tabbable-line>.nav-tabs>li:hover>a {
-      border: 0;
-      background: none !important;
-      color: #333333;
-    }
-
-    .tabbable-line>.nav-tabs>li.open>a>i,
-    .tabbable-line>.nav-tabs>li:hover>a>i {
-      color: #a6a6a6;
-    }
-
-    .tabbable-line>.nav-tabs>li.open .dropdown-menu,
-    .tabbable-line>.nav-tabs>li:hover .dropdown-menu {
-      margin-top: 0px;
-    }
-
-    .tabbable-line>.nav-tabs>li.active {
-      border-bottom: 4px solid #fbcdcf;
-      position: relative;
-    }
-
-    .tabbable-line>.nav-tabs>li.active>a {
-      border: 0;
-      color: #333333;
-    }
-
-    .tabbable-line>.nav-tabs>li.active>a>i {
-      color: #404040;
-    }
-
-    .tabbable-line>.tab-content {
-      margin-top: -3px;
-      background-color: #fff;
-      border-bottom: 1px solid #eee;
-    }
-
-    .portlet .tabbable-line>.tab-content {
-      padding-bottom: 0;
-    }
+}
+h2,h3 {
+  font-weight:lighter;
+}
+.container {
+  background-color: rgba(247, 247, 247, 0.93);
+}
+.block{
+  width: 25%;
+  float: left;
+}
+.list-style-type{
+  padding-left: 0px;
+  margin: 15px;
+}
+.list-style-type h2,h3{
+  text-align: center;
+  color: teal;
+  text-shadow: 1px 1px lightgrey;
+}
+.list-style-type li{
+  border-bottom:1px solid #e5e5e5;
+  list-style-type:none;
+  padding: 16px 16px 0px 16px;
+  position: relative;
+  height:108px;
+}
+.list-style-type p{
+  color: #999;
+  margin: 0;
+  text-transform: capitalize;
+  font-size: 12px;
+  margin-top: 6px;
+}
+.list-style-type a{
+  font-size:16px;
+  color: #707C74;
+}
+.list-style-type a:hover{
+  color: #75ccc2;
+  text-decoration: none;
+}
+@media only screen and (max-width: 993px){
+  .block{
+    width:25%;
+    float: left;
+  }
+  .list-style-type{
+    margin: 5px;
+  }
+  .list-style-type li{
+    padding: 8px 8px 0px 8px;
+    height:108px;
+  }
+}
+@media only screen and (max-width: 676px){
+  .block {
+    width: 100%;
+    float: left;
+  }
+  .list-style-type li{
+    height:auto;
+  }
+}
