--- a/src/app/news-list/news-list.component.html
+++ b/src/app/news-list/news-list.component.html
@@ -1,80 +1,68 @@
-<div class="container"style="max-width:500px;">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="tabbable-panel" >
-          <div class="tabbable-line">
-            <ul class="nav nav-tabs">
-              <li class="tablinks active" onmouseover="openTab(event, 'tab_default_1')">
-                <a>
-  							所有公告 </a>
-              </li>
-              <li class="tablinks" onmouseover="openTab(event, 'tab_default_2')">
-                <a>
-  							行政公告 </a>
-              </li>
-              <li class="tablinks" onmouseover="openTab(event, 'tab_default_3')">
-                <a>
-  							學術公告 </a>
-              </li>
-            </ul>
-            <div class="tab-content">
-              <div class="tab-pane active" id="tab_default_1">
-                <table class="table table-hover">
-                  <tbody>
-                    <tr class='clickable-row' data-href='#'>
-                      <td class="col-md-9">本系徵聘醫資管及MIS組專任教師各1名</td>
-                      <td class="data-text">2016-09-30</td>
-                    </tr>
-                    <tr class='clickable-row' data-href='#1'>
-                      <td class="col-md-9">106學年度碩士推薦甄試第二階段複試排程</td>
-                      <td class="data-text">2016-09-30</td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-              <div class="tab-pane" id="tab_default_2">
-                <table class="table table-hover">
-                  <tbody>
-                    <tr class='clickable-row' data-href='#3'>
-                      <td class="col-md-9">本系徵聘醫資管及MIS組專任教師各1名</td>
-                      <td>2016-09-05</td>
-                    </tr>
-                    <tr class='clickable-row' data-href='#4'>
-                      <td class="col-md-9">106學年度碩士推薦甄試第二階段複試排程</td>
-                      <td>2016-09-01</td>
-                    </tr>
-                    <tr class='clickable-row' data-href='url://some-other-link/'>
-                      <td class="col-md-9">105大學個人申請入學"個人資料表"下載</td>
-                      <td>2016-03-16</td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-              <div class="tab-pane" id="tab_default_3">
-                <table class="table table-hover">
-                  <tbody>
-                    <tr class='clickable-row' data-href='url://some-other-link/'>
-                        <td class="col-md-9">本系徵聘醫資管及MIS組專任教師各1名</td>
-                        <td>2016-09-30</td>
-                    </tr>
-                    <tr class='clickable-row' data-href='url://some-other-link/'>
-                      <td class="col-md-9">106學年度碩士推薦甄試第二階段複試排程</td>
-                      <td>2016-09-30</td>
-                    </tr>
-                    <tr class='clickable-row' data-href='url://some-other-link/'>
-                      <td>本系舉辦大學部新生家長座談會</td>
-                      <td>2016-04-15</td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-            </div>
-          </div>
-          <div class="container" style="max-width:450px;">
-            <div class="pull-right">
-            <a href="#"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>更多消息</a>
-          </div></div>
-        </div>
+<div class="container">
+    <div class="col-xs-12">
+      <div class="block">
+        <ol class="list-style-type">
+          <h3>系所公告</h3>
+          <li>
+            <a href="#">106學年度碩士推薦甄試第二階段複試排</a>
+            <p>Dec 9, 2016</p>
+          </li>
+          <li>
+            <a href="#">賀!本系羅美玲老師榮獲美國夏威夷大學榮譽校友!</a>
+            <p>Oct 15, 2016</p>
+          </li>
+          <li>
+            <a href="#">學士班個人申請入學口試排程</a>
+            <p>Oct 2, 2016</p>
+          </li>
+        </ol>
+      </div>
+      <div class="block">
+        <ol class="list-style-type">
+          <h3>活動資訊</h3>
+          <li>
+            <a href="#">100年度南區資通安全種子師資研習營</a>
+            <p>Oct 2, 2016</p>
+          </li>
+          <li>
+            <a href="#">教育部100年度台灣學術網路資安推廣中心資安研習營</a>
+            <p>Oct 2, 2016</p>
+          </li>
+          <li>
+            <a href="#">國民小學教育學程甄選即日起開始申請</a>
+            <p>Oct 2, 2016</p>
+          </li>
+        </ol>
+      </div>
+      <div class="block">
+        <ol class="list-style-type">
+          <h3>演講公告</h3>
+          <li>
+            <a href="#">科技翻轉世界_淺談大數據、互聯網、雲端運算</a>
+            <p>Oct 2, 2016</p>
+          </li>
+          <li>
+            <a href="#">探索長期照護的本質－兼論我國長照政策發展現況</a>
+            <p>Oct 2, 2016</p>
+          </li>
+          <li>
+            <a href="#">物聯網導向之智慧健康城</a>
+            <p>Oct 2, 2016</p>
+          </li>
+        </ol>
+      </div>
+      <div class="block">
+        <ol class="list-style-type">
+          <h3>其他公告</h3>
+          <li>
+            <a href="#">張文豹獎學金申請至3月21日截止</a>
+            <p>Oct 2, 2016</p>
+          </li>
+          <li>
+            <a href="#">系主任清寒學生優秀獎學金得獎名單公佈</a>
+            <p>Oct 2, 2016</p>
+          </li>
+        </ol>
       </div>
     </div>
   </div>
