--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -16,15 +16,31 @@
       <div class="carousel-inner">
         <div class="item active">
           <img src="assets/img/carousel1.png" alt="Awesome Image">
+          <div class="carousel-caption">
+          <h3>Chania1</h3>
+          <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
+        </div>
         </div>
         <div class="item">
           <img src="assets/img/carousel2.png" alt="Awesome Image">
+          <div class="carousel-caption">
+          <h3>Chania2</h3>
+          <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
+        </div>
         </div>
         <div class="item">
           <img src="assets/img/carousel3.png" alt="Awesome Image">
+          <div class="carousel-caption">
+          <h3>Chania3</h3>
+          <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
+        </div>
         </div>
         <div class="item">
           <img src="assets/img/carousel4.png" alt="Awesome Image">
+          <div class="carousel-caption">
+          <h3>Chania4</h3>
+          <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
+        </div>
         </div>
       </div>
 
